--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node ./dist/server.js",
-		"start:dev": "ts-node-dev --respawn --transpile-only ./dist/server.js",
+		"start:dev": "nodemon ./dist/server.js",
 		"build": "tsc",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
